test/fail/case_tag00.v3
//@execute 0=11; 1=12; 2=43
type E { case A(a: int); case B(b: int); }
def main(a: int) -> int {
	if (a == 0) return 11 + E.A.tag;
	if (a == 1) return 11 + E.B.tag;
	return 43;
}